# pysnobal

./: .clang-format  .gitignore  AUTHORS.rst  Makefile  README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/instructions/: context-agent.md
.github/workflows/: unittest.yml
config/: config.yaml
docs/: context-agent.md  ecosystem-agent.md  index.rst
notebooks/: pysnobal_data_prep.ipynb  pysnobal_notebook_workflow.ipynb
pysnobal/: defaults.py  ipysnobal.py  ipysnobal_cli.py  pysnobal.py  utils.py
pysnobal/c_snobal/: snobal.pyx
pysnobal/c_snobal/h/: envphys.h
pysnobal/c_snobal/libsnobal/: _below_thold.c  _divide_tstep.c  _do_tstep.c  _e_bal.c  _h_le.c  _snobal.h  call_snobal.c  do_data_tstep.c  error_logging.h  hle1.c  sati.c  satw.c
test_data/: pysnobal_test_input_rcew.csv
tests/: conftest.py  test_config_loading.py  test_input_parsing.py  test_pysnobal_real_data.py
tests/data/config/: baseline_config.yaml  baseline_expected.yaml  override_config.yaml  override_expected.yaml
tests/data/expected/: pysnobal_test_output_rcew.csv
tools/: config.yaml  pysnobal_data_prep.ipynb  pysnobal_notebook_workflow.ipynb
