[build-system]
requires = [
  "cython",
  "numpy<1.23",
  "setuptools",
  "setuptools_scm",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pysnobal"
description = "Python wrapper of the Snobal mass and energy balance snow model"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
authors = [{ name = "iSnobal Community" }]
keywords = ["pysnobal"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English"
]
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/iSnobal/pysnobal"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools_scm]
local_scheme = 'node-and-date'
write_to = "pysnobal/version.py"
